# num-traits

./: .gitignore  .travis.yml  Cargo.toml  README.md  RELEASES.md  SECURITY.md  bors.toml  build.rs
.github/workflows/: ci.yaml  main.yaml  master.yaml  pr.yaml
ci/: rustup.sh  test_full.sh
src/: atomics.rs  bits.rs  bounds.rs  cast.rs  coerced.rs  dist.rs  float.rs  identities.rs  induction.rs  int.rs  integer_bounds.rs  lib.rs  macros.rs  pow.rs  real.rs  realnum.rs  sign.rs
src/cast/: mod.rs
src/cast/safe/: cast.rs  grow.rs  mod.rs  sign.rs  size.rs  trim.rs
src/iter/: checked_product.rs  checked_sum.rs  mod.rs  num_iter.rs
src/ops/: bytes.rs  checked.rs  euclid.rs  inv.rs  mod.rs  mul_add.rs  overflowing.rs  pow.rs  saturating.rs  widening.rs  wrapping.rs
tests/: cast.rs  coerce.rs  num_impl_debug.rs
