[package]
authors = ["The Rust Project Developers"]
description = "Numeric traits for generic mathematics"
documentation = "https://docs.rs/num-traits"
homepage = "https://github.com/rust-num/num-traits"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-num/num-traits"
name = "num-traits"
version = "1.2.19"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.github/*"]
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
libm = { version = "0.2.0", optional = true }
rustversion.version = "1"

[features]
default = ["std", "unstable_1"]
libm = ["dep:libm"]
std = []

# vestigial features, now always in effect
i128 = []

unstable_1 = []

[build-dependencies]
autocfg = "1"
semver = "1"
