[package]
authors = ["The Rust Project Developers"]
description = "Numeric traits for generic mathematics"
documentation = "https://docs.rs/num-traits"
homepage = "https://github.com/rust-num/num-traits"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-num/num-traits"
name = "num-traits"
version = "0.2.19"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.github/*"]
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
libm = { version = "0.2.0", optional = true }

[features]
default = ["std"]
libm = ["dep:libm"]
std = []

# Allows access to functionality only available in Rust 1.77, such as round_ties_even
# This increases the MSRV to 1.77
msrv_1_77 = []

# vestigial features, now always in effect
i128 = []

[build-dependencies]
autocfg = "1"
